# another_gpu_path_tracer

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  install-adaptive-cpp.sh  install-llvm.sh  reinstall-ninja.sh
cmake/: AGPTracerConfig.cmake.in
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
include/: another_gpu_path_tracer.h  another_gpu_path_tracer.hpp  another_path_tracer.h
include/cameras/: SphericalCamera_t.hpp  SphericalCamera_t.tpp  cameras.hpp
include/entities/: Camera.hpp  Image.hpp  Material.hpp  Medium.hpp  MediumList_t.hpp  MeshGeometry_t.h  MeshGeometry_t.hpp  MeshGeometry_t.tpp  RandomGenerator_t.hpp  RandomGenerator_t.tpp  RandomNumberGenerator_t.hpp  Ray_t.h  Ray_t.hpp  Ray_t.tpp  Resetable.hpp  Scene_t.hpp  Scene_t.tpp  Shape.hpp  Skybox.hpp  Texture_t.hpp  Texture_t.tpp  TransformMatrix_t.h  TransformMatrix_t.hpp  TransformMatrix_t.tpp  Translucent.hpp  UniformDistribution_t.hpp  Updatable.hpp  Vec3.h  Vec3.hpp  Vec3.tpp  entities.h  entities.hpp
include/images/: SimpleImage_t.hpp  SimpleImage_t.tpp  images.hpp
include/materials/: Diffuse_t.hpp  Diffuse_t.tpp  materials.hpp
include/mediums/: NonAbsorber_t.hpp  NonAbsorber_t.tpp  mediums.hpp
include/shapes/: Triangle_t.h  Triangle_t.hpp  Triangle_t.tpp  shapes.h  shapes.hpp
include/skyboxes/: SkyboxFlat_t.hpp  SkyboxFlat_t.tpp  skyboxes.hpp
src/: CMakeLists.txt  main.cpp
src/cameras/: CMakeLists.txt  spherical_camera.cppm
src/entities/: CMakeLists.txt  MeshGeometry_t.cpp  Ray_t.cpp  TransformMatrix_t.cpp  camera.cppm  image.cppm  material.cppm  medium.cppm  medium_list.cppm  mesh_geometry.cppm  random_generator.cppm  random_number_generator.cppm  ray.cppm  resettable.cppm  scene.cppm  shape.cppm  skybox.cppm  texture.cppm  transformation_matrix.cppm  translucent.cppm  uniform_distribution.cppm  updatable.cppm  vec3.cppm
src/images/: CMakeLists.txt  simple_image.cppm
src/materials/: CMakeLists.txt  diffuse_material.cppm
src/mediums/: CMakeLists.txt  non_absorber_medium.cppm
src/shapes/: CMakeLists.txt  Triangle_t.cpp  triangle.cppm
src/skyboxes/: CMakeLists.txt  flat_skybox.cppm
tests/: CMakeLists.txt  example_test.cpp
